Bug 835148: Implement SmsEvent using event generator. r=smaug